[package]
name = "mc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
chrono = "0.4.38"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
syn = "2.0.63"
quote = "1.0.36"
thiserror = "1.0.60"


[lib]
proc-macro = true